--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,3 +7,5 @@
 @import '../css/partners.scss';
 @import '../css/training.scss';
 @import '../css/growth.scss';
+@import '../css/news.scss';
+@import '../css/testimonial.scss';
