--- a/assets/css/training.scss
+++ b/assets/css/training.scss
@@ -15,7 +15,7 @@
             @apply  absolute inset-y-0 left-0 w-full max-w-xs 
         }
         img{
-            @apply absolute top-0 inset-0 h-full object-cover mt-16
+            @apply absolute top-0 inset-0 h-full object-cover
         }
      }
 }
